samples/_failures_safe/1761647600_a5fc3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b31b7791.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b31b7791.c:182:5: error: expected declaration or statement at end of input
  182 |     token.value[0] = input[*pos];
      |     ^~~~~
